# rlabel

./: .gitignore
rlabel/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
rlabel/mcp-server/: README.md  claude-mcp-config.json  package-lock.json  package.json
rlabel/mcp-server/src/: index.ts
rlabel/mcp-server/src/tools/: automationController.ts  automationTypes.ts  testRunner.ts  types.ts
rlabel/src/: App.tsx  main.tsx
rlabel/src-tauri/: Cargo.toml  tauri.conf.json
rlabel/src-tauri/capabilities/: default.json
rlabel/src-tauri/src/: ai.rs  export.rs  imaging.rs  lib.rs  main.rs  video.rs
rlabel/src/__tests__/: setup.ts
rlabel/src/components/layout/: FixedPanel.tsx  FloatingPanel.tsx  HoverTriggerArea.tsx  PanelContent.tsx  PanelHeader.tsx
rlabel/src/components/modern/: AIPanel.tsx  Canvas.tsx  ChatbotPanel.tsx  ClassificationPanel.tsx  ImageListSidebar.tsx  Sidebar.tsx  StatsDialog.tsx  Toolbar.tsx  TopNav.tsx  VideoPanel.tsx  index.ts
rlabel/src/components/panels/: AnnotationPanel.tsx  AttributePanel.tsx  FilePanel.tsx  HistoryPanel.tsx  LabelPanel.tsx  (+3 more)
rlabel/src/constants/: annotation.ts
rlabel/src/hooks/: useAutoSave.ts  useKeyboardShortcuts.ts
rlabel/src/i18n/: index.ts
rlabel/src/store/: annotationStore.ts  localeStore.ts  themeStore.ts
rlabel/src/styles/: globals.css
rlabel/src/types/: annotation.ts  project.ts
rlabel/src/utils/: annotationHelpers.ts  exportImport.ts  fileOps.ts  keyboardShortcuts.ts
rlabel/tests/e2e/: app-full.spec.ts  app.spec.ts
(+4 files in other folders)
